--- a/frontend/kidsground/package.json
+++ b/frontend/kidsground/package.json
@@ -10,6 +10,7 @@
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "use-places-autocomplete": "^4.0.1",
