--- a/frontend/kidsground/package.json
+++ b/frontend/kidsground/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^18.2.0",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.21.1",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "use-places-autocomplete": "^4.0.1",
     "web-vitals": "^2.1.4"
