--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.show-sql=true
 
 security.basic.enable=false
 security.ignored=/**
+
+spring.application.name=kidsground
+cloud.aws.region.static=eu-central-1
