--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -48,7 +48,7 @@
 			<artifactId>bom</artifactId>
 			<version>${aws.java.sdk.version}</version>
 			<type>pom</type>
-			<scope>import</scope>
+			<scope>compile</scope>
 		</dependency>
 
 
