--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -34,6 +34,11 @@
 			<type>pom</type>
 			<scope>compile</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.7.3</version>
+		</dependency>
 
 
 		<dependency>
