remove auth temp

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.application.name=kidsground
 cloud.aws.region.static=eu-central-1
 
 aws.app.name=kidsground
+aws.profile=default
+aws.region=eu_central_1
