--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -14,3 +14,8 @@ cloud.aws.region.static=eu-central-1
 aws.app.name=kidsground
 aws.profile=default
 aws.region=eu_central_1
+
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=${KEYSTORE_PASSWORD}
+server.ssl.key-alias=kidsground
+server.ssl.key-store-type=PKCS12
