--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -5,6 +5,10 @@ spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
 security.basic.enable=false
 security.ignored=/**
 
@@ -13,7 +17,7 @@ cloud.aws.region.static=eu-central-1
 
 aws.app.name=kidsground
 aws.profile=default
-aws.region=eu_central_1
+aws.region=eu-central-1
 
 server.ssl.key-store=classpath:keystore.p12
 server.ssl.key-store-password=${KEYSTORE_PASSWORD}
