--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -69,7 +69,12 @@
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>6.3.0</version>
+			<version>6.3.1</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-core</artifactId>
+			<version>6.3.1</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
