--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -4,10 +4,12 @@ FROM amazoncorretto:21
 # the JAR file path
 ARG JAR_FILE=target/*.jar
 
+EXPOSE 8009
+
 # Copy the JAR file from the build context into the Docker image
 COPY ${JAR_FILE} application.jar
 
 CMD apt-get update -y
 
 # Set the default command to run the Java application
-ENTRYPOINT ["java", "-Xmx2048M", "-jar", "/application.jar"]
+ENTRYPOINT ["java", "-jar", "/application.jar"]
