--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && sudo cp ./build /var/www/html/kidsground-app/",
+    "build": "react-scripts build && sudo cp -r ./build /var/www/html/kidsground-app/",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
