--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -153,6 +153,19 @@
 			<scope>provided</scope>
 		</dependency>
 
+		<!-- Jakarta Mail (Replaces JavaMail) -->
+		<dependency>
+			<groupId>org.eclipse.angus</groupId>
+			<artifactId>jakarta.mail</artifactId>
+			<version>2.0.2</version>
+		</dependency>
+
+		<!-- JSON Processing (optional, for handling JSON payloads) -->
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
